--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
 
             <h1><a href="index.html">Ngoc Tam HO</a></h1>
-            <h2 style="color:#fff">Bonjour, I am <span class="typing" style="color:#12D640"></span></h2>
+            <h2 style="color:#fff">Bonjour, I am striving to learn in order to become <span class="typing" style="color:#12D640"></span></h2>
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
                     <li class="active"><a href="#header"> <span>Home</span></a></li>
@@ -116,16 +116,16 @@
                 <h5 style="text-align:left;">May 2023</h5>
                 <h6 style="text-align:left;color:#ff5600">Technologies</h6>
                 <ul style="text-align:left;">
-                  <li>HDFS, Hive, Sqoop, PySpark</li>
+                  <li>MySQL, PySpark</li>
                 </ul>
                 <p style="text-align:left;color:#ff5600">Description<br></p>
                 <ul style="text-align:left;">
-                  <li>The goal of the project is to create data pipelines for the Health Care insurance company which will make the company make appropriate business strategies to enhance their revenue by analyzing customers behaviors and send offers and royalties to customers respectively.</li>
+                  <li>The goal of the project is to create data pipelines, and then use data for analytics based on Customer 360 behaviours.</li>
                 </ul>
               </div>
             </div>
       
-            <div class="col-lg-6" data-aos="fade-up">
+            <!-- <div class="col-lg-6" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a style="color:#12d640">DATA STREAMING PIPELINE</a><br> </h4>
                 <h5 style="text-align:left;">May 2023</h5>
@@ -163,7 +163,7 @@
                 <ul style="text-align:left;">
                   <li>The goal of the project is to create data pipelines for the Health Care insurance company which will make the company make appropriate business strategies to enhance their revenue by analyzing customers behaviors and send offers and royalties to customers respectively.</li>
                 </ul>
-            </div>
+            </div> -->
         
             </div>
           </div>
