--- a/index.html
+++ b/index.html
@@ -2,190 +2,130 @@
 <html lang="en">
 
 <head>
-    <!-- Google Tag Manager -->
-    <script>
-    (function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-5BB8W2X');</script>
-    <!-- End Google Tag Manager -->
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-    <title>Personal Portfolio</title>
-    <meta content="" name="descriptison">
-    <meta content="" name="keywords">
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-    <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-
-    <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
-
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169007209-3"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-169007209-3');
-    </script>
-
-
-    <!-- =======================================================
-    * Template Name: Personal - v2.1.0
-    * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
-    ======================================================== -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+    <title>Tam Ho</title>
 </head>
 
 <body>
 
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X"
-                height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
+    <!-- HEADER -->
+    <header class="l-header">
+        <nav class="nav bd-grid">
+            <div>
+                <a href="#" class="nav__logo">Tam Ho</a>
+            </div>
 
-    <!-- End Google Tag Manager (noscript) -->
-    <!-- ======= Header ======= -->
-
-    <header id="header" class="header-tops">
-
-        <div class="container">
-
-            <h1><a href="index.html">Ngoc Tam HO</a></h1>
-            <h2 style="color:#fff">Bonjour, I am striving to learn in order to become <span class="typing" style="color:#12D640"></span></h2>
-            <nav class="nav-menu d-none d-lg-block">
-                <ul>
-                    <li class="active"><a href="#header"> <span>Home</span></a></li>
-                    <li><a href="#projects"> <span>Projects</span></a></li>
-                    <li><a href="#experience"> <span>Working Experience</span></a></li>
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link">Portfolio</a></li>
                 </ul>
-            </nav><!-- .nav-menu -->
-
-            <div class="social-links">
-                <a href="https://www.linkedin.com/in/tamdemi17" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                <a href="https://github.com/hntam812" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-                <a href="mailto:hongoctam0812@@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
             </div>
-        </div>
 
-    </header><!-- End Header -->
-
-    <!-- Start Project Section -->
-    <section id="projects" class="services">
-      <div class="container">
-        <div class="section-title">
-          <h2>Personal projects</h2>
-        </div>
-        <div class="row">
-            <div class="col-lg-12" data-aos="fade-up">
-                <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                    <h4 style="text-align:left;"><a style="color:#12d640">DATA MODELING with POSTGRESQL</a><br> </h4>
-                    <p style="text-align:left;color:#ff5600">Project Description<br></p>
-                    <ul style="text-align:left;">
-                      <li>Build an ETL pipeline using Python.</li>
-                      <li>Define fact and dimension tables for a star schema for a particular analytics focus.</li>
-                      <li>Write an ETL pipeline to transfer data from local into these tables in Postgre using Python and SQL.</li>  
-                    </ul>
-                    <p style="text-align:left;color:#ff5600"> <a href="https://github.com/Hntam812/dataModellingwithPostgre"> Link project</a><br></p>
-                </div>
+            <div class="nav__toggle" id="nav-toggle">
+                <i class='bx bx-menu'></i>
             </div>
-        </div>
+        </nav>
+    </header>
 
-        <div class="row">
-            <div class="col-lg-12" data-aos="fade-up">
-                <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                    <h4 style="text-align:left;"><a style="color:#12d640">HEALTHCARE ANALYTICS</a><br> </h4>
-                    <p style="text-align:left;color:#ff5600">Project Description<br></p>
-                    <ul style="text-align:left;">
-                      <li>Python: We utilize Python for data processing, performing data cleaning tasks, and implementing data analysis algorithms.</li>
-                      <li>SQL: SQL is employed for querying and managing databases, including storing the cleaned and transformed data.</li>
-                      <li>Hadoop: Hadoop is deployed to store and process large volumes of unstructured data from different sources.</li>
-                      <li>Spark: Spark is used to execute complex and efficient data analysis tasks on data stored in Hadoop..</li>
-                      <li>MySQL: MySQL is employed to store the cleaned and transformed data, ensuring data integrity and security.</li> 
-                      <li>Sqoop: Sqoop is utilized to transfer data between SQL databases and the HDFS in Hadoop.</li> 
-                    </ul>
-                    <p style="text-align:left;color:#ff5600"> <a href="https://github.com/Hntam812/bigdataHealthcareAnalytics"> Link project</a><br></p>
-                </div>
-            </div>
-        </div>
-      </div>
-    </section>
-    <!-- End Projects Section -->
+    <!-- MAIN CONTENT -->
+    <main class="l-main">
 
-
-    <!-- Start Experience Section -->
-    <section id="experience" class="services">
-      <div class="container">
-        <div class="section-title">
-          <h2>Experience</h2>
-        </div>
-        <div class="row">
-            <div class="col-lg-12" data-aos="fade-up">
-                <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                    <h4 style="text-align:left;"><a style="color:#12d640">GROUPE SEB COMPANY</a><br> </h4>
-                    <h5 style="text-align:left;">Oct 2022 - Mar 2023 , Vietnam</h5>
-                    <h6 style="text-align:left;color:#ff5600">Fresher Data Scientist (E-commerce Department)</h6>
-                    <p style="text-align:left;color:#fff">Responsibilities<br></p>
-                    <ul style="text-align:left;">
-                        <li>Worked with a variety of data sources - extracting knowledge and actionable information from massive datasets.</li>
-                        <li>Implemented methodologies to solve data problems across the data lifecycle.</li>
-                        <li>Provided clean dataset, doing ETL and data pipeline to storage into data lake based on requirements.</li>
-                        <li>Designed visualizations, monitors and alerting systems to catch system issues and data anomalies.</li>
-                        <li>Communicated and provided technical sharing with non-technical team members and stakeholders.</li>
-                    </ul>
+        <!-- HOME -->
+        <section class="home bd-grid" id="home">
+            <header class="home__header">
+                <div class="home__data">
+                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Tam Ho</span><br> Data Engineer
+                    </h1>
+                    <a href="#" class="button">Hire me</a>
                 </div>
 
+                <nav class="home__social">
+                    <a href="https://www.linkedin.com/in/tamdemi17/" class="home__social-icon"><i
+                            class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/Hntam812" class="home__social-icon"><i class='bx bxl-github'></i></a>
+                </nav>
+            </header>
+
+            <div class="home__img">
+                <svg class="home__blob" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <mask id="mask0" mask-type="alpha">
+                        <path
+                            d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z" />
+                    </mask>
+                    <g mask="url(#mask0)">
+                        <path
+                            d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z" />
+                        <image class="home__blob-img" x="50" y="60" href="assets/img/prefil.gif" alt="Blob Image" />
+                    </g>
+                </svg>
             </div>
-          </div>
+        </section>
+
+        <section class="work section" id="work">
+            <h2 class="section-title">My Latest Projects</h2>
+            <div class="grid">
+
+                <div class="card">
+                    <div class="card_img">
+                        <img src="assets/img/azure-integration-services-architecture-overview.png" alt="">
+                    </div>
+                    <div class="card_body">
+                        <h2 class="card_title">Data Engineering: Data Pipeline on Azure cloud</h2>
+                        <p>A Data pipeline implemented on Azure clouds and Data warehouse. </p>
+                        <a href="https://github.com/Hntam812/bigdataHealthcareAnalytics" class="read_more">Read
+                            article</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card_img">
+                        <img src="assets/img/dataenrichment.webp" alt="">
+                    </div>
+                    <div class="card_body">
+                        <h2 class="card_title">Data Enrichment: Data-Bot tools </h2>
+                        <p>The Data Enrichment Bot project is an automated system designed to streamline and secure the data enrichment process. </p>
+                        <a href="https://github.com/Hntam812/bigdataHealthcareAnalytics" class="read_more">Read
+                            article</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card_img">
+                        <img src="assets/img/bigdata.jpg" alt="">
+                    </div>
+                    <div class="card_body">
+                        <h2 class="card_title">Big data: ETL data with PySpark</h2>
+                        <p>A helpful tutorial I wrote recently usage in the Big Data Field.</p>
+                        <a href="https://github.com/Hntam812/bigdataHealthcareAnalytics" class="read_more">Read
+                            article</a>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <p class="footer__title">Tam Ho</p>
+        <div class="footer__social">
+            <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
+            <a href="#" class="footer__icon"><i class='bx bxl-instagram'></i></a>
+            <a href="#" class="footer__icon"><i class='bx bxl-twitter'></i></a>
         </div>
+        <p class="footer__copy">&#169; Tam Ho. All rights reserved</p>
+    </footer>
 
-    </section>
+    <!-- EXTERNAL LIBRARIES -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
-    <!-- End Experience Section -->
-
-    <!-- End Contact Section -->
-    <!-- Vendor JS Files -->
-    <script src="assets/vendor/jquery/jquery.min.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-    <script src="assets/vendor/counterup/counterup.min.js"></script>
-    <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/venobox/venobox.min.js"></script>
-    <script src="assets/vendor/typed.js/typed.min.js"></script>
-    <script type="text/javascript">
-        var typed = new Typed('.typing', {
-            strings: ["Data Engineer", "Machine Learning Engineer","AI Engineer", "Big Data Enthusiast", "Miss Universe"],
-            loop: true,
-            typeSpeed: 65,
-            backSpeed: 65
-        });
-    </script>
-
-    <!-- Template Main JS File -->
+    <!-- MAIN JS -->
     <script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
