--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                         <img src="assets/img/azure-integration-services-architecture-overview.png" alt="">
                     </div>
                     <div class="card_body">
-                        <h2 class="card_title">Data Engineering: Data Pipeline on Azure cloud</h2>
-                        <p>A Data pipeline implemented on Azure clouds and Data warehouse. </p>
-                        <a href="https://github.com/Hntam812/DataEngineeringProjects/tree/main/DataEngineering" class="read_more">Read
+                        <h2 class="card_title">DXP - Projects</h2>
+                        <p> See my projects in Github </p>
+                        <a href="https://github.com/Hntam812/DXP-Projects" class="read_more">Read
                             article</a>
                     </div>
                 </div>
@@ -87,9 +87,9 @@
                         <img src="assets/img/dataenrichment.webp" alt="">
                     </div>
                     <div class="card_body">
-                        <h2 class="card_title">Data Enrichment: Data-Bot tools </h2>
-                        <p>The Data Enrichment Bot project is an automated system designed to streamline and secure the data enrichment process. </p>
-                        <a href="https://github.com/Hntam812/DataEngineeringProjects/tree/main/DataEnrichment" class="read_more">Read
+                        <h2 class="card_title">GS - Projects </h2>
+                        <p> See my projects in Github </p>
+                        <a href="https://github.com/Hntam812/GS-Projects" class="read_more">Read
                             article</a>
                     </div>
                 </div>
@@ -99,9 +99,9 @@
                         <img src="assets/img/bigdata.jpg" alt="">
                     </div>
                     <div class="card_body">
-                        <h2 class="card_title">Big data: ETL data with PySpark</h2>
-                        <p>A helpful tutorial I wrote recently usage in the Big Data Field.</p>
-                        <a href="https://github.com/Hntam812/DataEngineeringProjects/tree/main/BigData" class="read_more">Read
+                        <h2 class="card_title">Personal Projects</h2>
+                        <p> See my projects in Github </p>
+                        <a href="https://github.com/Hntam812/DataProjects" class="read_more">Read
                             article</a>
                     </div>
                 </div>
